# barnes-rust

./: .gitignore  Cargo.toml  README.md  cachegrind.out  cachegrind.txt  output.txt
plots/: binary.csv  output.txt  output_0.txt  output_1.txt  output_2.txt  output_3.txt  output_4.txt  output_plot.csv  output_plot.txt  output_plot_2.csv  plot.py
src/: .#physics.rs  data.rs  gfx.rs  lib.rs  main.rs  output.txt  physics.rs  tree.rs
src/simulation/: tree.rs
tests/: integration_test.rs  unit_tests.rs
writeup/: writeup.tex
